# recruit-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml  pr.yml
app/: Cargo.toml
app/src/: app.rs  jobs.rs  lib.rs  profile.rs  profile_list_item.rs  tech_tag.rs  techs.rs  tests.rs  utc_offset.rs  utc_offset_set.rs
app/static/: app.css
candidate/: Cargo.toml
candidate/src/: lib.rs
examples/asia_yozhgoor/: Cargo.toml
examples/asia_yozhgoor/src/: lib.rs
examples/australia_yozhgoor/: Cargo.toml
examples/australia_yozhgoor/src/: lib.rs
examples/n_america_yozhgoor/: Cargo.toml
examples/n_america_yozhgoor/src/: lib.rs
examples/relocate_yozhgoor/: Cargo.toml
examples/relocate_yozhgoor/src/: lib.rs
examples/s_america_yozhgoor/: Cargo.toml
examples/s_america_yozhgoor/src/: lib.rs
examples/yozhgoor/: Cargo.toml
examples/yozhgoor/src/: lib.rs
mock-proc-macro/: Cargo.toml
mock-proc-macro/src/: lib.rs
src/: app.rs  candidate.rs  contributions.rs  jobs.rs  lib.rs  list_candidate.rs  list_item.rs  main.rs  mock.rs  page_not_found.rs  profile.rs  profile_list.rs  profile_list_item.rs  profile_not_found.rs  tech_tag.rs  techs.rs  timezone_set.rs  utc_offset_set.rs
static/: _redirects  app.css  index.html
