[package]
name = "recruit-rust"
version = "0.1.0"
authors = ["yozhgoor <yozhgoor@outlook.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
wasm-run = { version = "0.8.0" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace]
members = ["candidate", "examples/yozhgoor", "mock-proc-macro", "app"]
