[package]
name = "app"
version = "0.1.0"
authors = ["Yozhgoor <yozhgoor@outlook.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew.git", rev = "db3170f629f" }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "db3170f629f" }
yewprint = { git = "https://github.com/cecton/yewprint.git", branch = "main" }
itertools = "0.10.0"
chrono = { version = "0.4", features = ["wasmbind"] }
chrono-tz = "0.5"
yozhgoor = { path = "examples/yozhgoor" }
asia_yozhgoor = { path = "examples/asia_yozhgoor" }
australia_yozhgoor = { path = "../examples/australia_yozhgoor" }
n_america_yozhgoor = { path = "../examples/n_america_yozhgoor" }
s_america_yozhgoor = { path = "../examples/s_america_yozhgoor" }
relocate_yozhgoor = { path = "../examples/relocate_yozhgoor" }
candidate = { path = "../candidate" }
